<resources>
    <string name="app_dub_sub_episode_text_format" formatted="true">%1$s Ep %2$d</string>
    <string name="cast_format" formatted="true">Pemeran: %s</string>
    <string name="result_poster_img_des">Poster</string>
    <string name="search_poster_img_des">Poster</string>
    <string name="episode_poster_img_des">Poster Episode</string>
    <string name="home_main_poster_img_des">Poster Utama</string>
    <string name="home_next_random_img_des">Acak selanjutnya</string>
    <string name="go_back_img_des">Kembali</string>
    <string name="home_change_provider_img_des">Ganti Penyedia</string>
    <string name="preview_background_img_des">Pratinjau Latar Belakang</string>
    <string name="player_speed_text_format" formatted="true">Kecepatan (%.2fx)</string>
    <string name="rated_format" formatted="true">Nilai: %.1f</string>
    <string name="new_update_format" formatted="true">Pembaruan ditemukan!\n%1$s -&gt; %2$s</string>
    <string name="filler" formatted="true">Filler</string>
    <string name="duration_format" formatted="true">%d mnt</string>
    <string name="app_name">neXXXup</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_discover">Discover</string>
    <string name="discover_providers">Discover Providers</string>
    <string name="discover_providers_hint">Pencarian provider…</string>
    <string name="discover_providers_sub">Direct access to dozens of leading streaming engines</string>
    <string name="title_downloads">Unduhan</string>
    <string name="title_settings">Pengaturan</string>
    <string name="search_hint">Cari…</string>
    <string name="search_hint_site" formatted="true">Cari %s…</string>
    <string name="no_data">Tidak Ada Data</string>
    <string name="episode_more_options_des">Opsi Lainnya</string>
    <string name="next_episode">Episode selanjutnya</string>
    <string name="result_tags">Genre</string>
    <string name="result_share">Bagikan</string>
    <string name="result_open_in_browser">Buka di Peramban</string>
    <string name="skip_loading">Lewati Pemuatan</string>
    <string name="loading">Memuat…</string>
    <string name="type_watching">Sedang Ditonton</string>
    <string name="type_on_hold">Ditunda</string>
    <string name="type_completed">Selesai</string>
    <string name="type_dropped">Dihentikan</string>
    <string name="type_plan_to_watch">Ingin Ditonton</string>
    <string name="type_re_watching">Ditonton Ulang</string>
    <string name="play_movie_button">Putar Film</string>
    <string name="play_torrent_button">Stream Torrent</string>
    <string name="pick_source">Sumber</string>
    <string name="pick_subtitle">Subtitel</string>
    <string name="reload_error">Coba ulang koneksi…</string>
    <string name="go_back">Kembali</string>
    <string name="play_episode">Putar Episode</string>
    <string name="download">Unduh</string>
    <string name="downloaded">Terunduh</string>
    <string name="downloading">Mengunduh</string>
    <string name="download_paused">Unduhan dijeda</string>
    <string name="download_started">Unduhan dimulai</string>
    <string name="download_failed">Unduhan gagal</string>
    <string name="download_canceled">Unduhan diibatalkan</string>
    <string name="download_done">Unduhan selesai</string>
    <string name="error_loading_links_toast">Galat Memuat Tautan</string>
    <string name="download_storage_text">Penyimpanan Internal</string>
    <string name="app_dubbed_text">Dub</string>
    <string name="app_subbed_text">Sub</string>
    <string name="popup_delete_file">Hapus Berkas</string>
    <string name="popup_play_file">Putar Berkas</string>
    <string name="popup_resume_download">Lanjutkan unduhan</string>
    <string name="popup_pause_download">Jeda unduhan</string>
    <string name="home_more_info">Lebih banyak info</string>
    <string name="home_expanded_hide">Sembunyikan</string>
    <string name="home_play">Putar</string>
    <string name="home_info">Info</string>
    <string name="filter_bookmarks">Filter Markah</string>
    <string name="error_bookmarks_text">Markah</string>
    <string name="action_remove_from_bookmarks">Hapus</string>
    <string name="action_add_to_bookmarks">Atur status tontonan</string>
    <string name="sort_apply">Terapkan</string>
    <string name="sort_copy">Salin</string>
    <string name="sort_close">Tutup</string>
    <string name="sort_clear">Bersihkan</string>
    <string name="sort_save">Simpan</string>
    <string name="player_speed">Kecepatan Pemutar</string>
    <string name="subtitles_settings">Pengaturan Subtitel</string>
    <string name="subs_text_color">Warna Teks</string>
    <string name="subs_outline_color">Warna Garis Luar</string>
    <string name="subs_background_color">Warna Latar Belakang</string>
    <string name="subs_window_color">Warna Jendela</string>
    <string name="subs_edge_type">Jenis Tepi</string>
    <string name="subs_subtitle_elevation">Ketinggian Subtitel</string>
    <string name="subs_font">Fonta</string>
    <string name="subs_font_size">Ukuran Fonta</string>
    <string name="search_provider_text_providers">Cari menggunakan penyedia</string>
    <string name="search_provider_text_types">Cari menggunakan jenis</string>
    <string name="benene_count_text">%d piseng diberikan kepada pengembang</string>
    <string name="benene_count_text_none">Tidak ada piseng yang diberikan</string>
    <string name="subs_auto_select_language">Pilih Bahasa Otomatis</string>
    <string name="subs_download_languages">Unduh Bahasa</string>
    <string name="subs_hold_to_reset_to_default">Tahan untuk mengatur ulang ke bawaan</string>
    <string name="subs_import_text" formatted="true">Impor fonta dengan meletakkan mereka di %s</string>
    <string name="continue_watching">Lanjutkan Menonton</string>
    <string name="action_remove_watching">Hapus</string>
    <string name="action_open_watching">Lebih banyak info</string>
    <string name="action_open_play">@string/home_play</string>
    <string name="vpn_might_be_needed">VPN mungkin diperlukan agar penyedia ini bisa bekerja dengan baik</string>
    <string name="vpn_torrent">Penyedia ini adalah torrent, VPN direkomendasikan</string>
    <string name="provider_info_meta">Metadata tidak disediakan oleh situs, pemuatan video akan gagal jika tidak ada di situs.</string>
    <string name="torrent_plot">Deskripsi</string>
    <string name="normal_no_plot">Plot Tidak Ditemukan</string>
    <string name="torrent_no_plot">Deskripsi Tidak Ditemukan</string>
    <string name="show_log_cat">Tampilkan Logcat 🐈</string>
    <string name="picture_in_picture">Gambar-dalam-gambar</string>
    <string name="picture_in_picture_des">Lanjutkan pemutaran di pemutar mini di atas aplikasi lain</string>
    <string name="player_size_settings">Tombol ubah ukuran pemutar</string>
    <string name="player_size_settings_des">Hapus garis tepi hitam</string>
    <string name="player_subtitles_settings">Subtitel</string>
    <string name="player_subtitles_settings_des">Pengaturan subtitel pemutar</string>
    <string name="chromecast_subtitles_settings">Subtitel Chromecast</string>
    <string name="chromecast_subtitles_settings_des">Pengaturan subtitel Chromecast</string>
    <string name="eigengraumode_settings">Kecepatan pemutaran</string>
    <string name="swipe_to_seek_settings">Geser untuk mengubah waktu</string>
    <string name="swipe_to_seek_settings_des">Geser dari sisi ke sisi untuk mengontrol posisi dalam video</string>
    <string name="swipe_to_change_settings">Geser untuk mengubah pengaturan</string>
    <string name="swipe_to_change_settings_des">Geser ke atas atau ke bawah di sisi kiri atau kanan untuk mengubah kecerahan atau volume</string>
    <string name="double_tap_to_seek_settings">Tekan dua kali untuk mengubah waktu</string>
    <string name="double_tap_to_pause_settings">Tekan dua kali untuk menjeda</string>
    <string name="double_tap_to_seek_amount_settings">Jumlah pengubah waktu pemutar (Detik)</string>
    <string name="double_tap_to_seek_settings_des">Tekan dua kali di sisi kanan atau kiri untuk mengubah waktu ke depan atau ke belakang</string>
    <string name="double_tap_to_pause_settings_des">Tekan dua kali di tengah untuk menjeda</string>
    <string name="use_system_brightness_settings">Gunakan kecerahan sistem</string>
    <string name="use_system_brightness_settings_des">Gunakan pencerahan sistem pada pemutar aplikasi daripada overlay gelap</string>
    <string name="episode_sync_settings">Perbarui progres tontonan</string>
    <string name="episode_sync_settings_des">Sinkronisasikan progres episode saat ini secara otomatis</string>
    <string name="restore_settings">Pulihkan data dari cadangan</string>
    <string name="backup_settings">Cadangkan data</string>
    <string name="restore_success">File cadangan termuat</string>
    <string name="restore_failed_format" formatted="true">Gagal untuk memulihkan data dari file %s</string>
    <string name="backup_success">Data tersimpan</string>
    <string name="backup_failed">Izin penyimpanan tidak ditemukan, mohon coba lagi.</string>
    <string name="backup_failed_error_format">Gagal mencadangkan %s</string>
    <string name="search">Cari</string>
    <string name="category_account">Akun dan Keamanan</string>
    <string name="category_updates">Update dan Cadangan</string>
    <string name="settings_info">Info</string>
    <string name="advanced_search">Pencarian Lanjutan</string>
    <string name="advanced_search_des">Memberikan hasil pencarian yang dipisahkan berdasarkan penyedia</string>
    <string name="show_fillers_settings">Tampilkan episode filler untuk anime</string>
    <string name="updates_settings">Tampilkan pembaruan aplikasi</string>
    <string name="updates_settings_des">Secara otomatis mencari pembaruan baru setelah aplikasi dibuka.</string>
    <string name="github">Github</string>
    <string name="lightnovel">Aplikasi novel ringan dari developer yang sama</string>
    <string name="anim">Aplikasi anime dari developer yang sama</string>
    <string name="discord">Bergabung dengan Discord</string>
    <string name="benene">Berikan sebuah piseng kepada developer</string>
    <string name="benene_des">Piseng yang diberikan</string>
    <string name="app_language">Bahasa Aplikasi</string>
    <string name="no_chromecast_support_toast">Penyedia ini tidak memiliki dukungan Chromecast</string>
    <string name="no_links_found_toast">Tidak Ada Tautan Yang Ditemukan</string>
    <string name="copy_link_toast">Tautan disalin ke papan klip</string>
    <string name="play_episode_toast">Putar Episode</string>
    <string name="subs_default_reset_toast">Ulang ke pengaturan default</string>
    <string name="season">Season</string>
    <string name="no_season">Tidak Ada Season</string>
    <string name="episode">Episode</string>
    <string name="episodes">Episode</string>
    <string name="season_short">S</string>
    <string name="episode_short">E</string>
    <string name="no_episodes_found">Episode Tidak Ditemukan</string>
    <string name="delete_file">Hapus File</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batalkan</string>
    <string name="pause">Jeda</string>
    <string name="resume">Lanjutkan</string>
    <string name="go_back_30">-30</string>
    <string name="go_forward_30">+30</string>
    <string name="delete_message" formatted="true">Ini akan secara permanen menghapus %s
\nApakah anda yakin?</string>
    <string name="resume_time_left" formatted="true">%dm
\ntersisa</string>
    <string name="status_ongoing">Masih Berlanjut</string>
    <string name="all_adult">All</string>
    <string name="asian_adult">Asian</string>
    <string name="western_adult">Western</string>
    <string name="webcam">Webcam</string>
    <string name="go_to_downloads">Kunjungi Unduhan</string>
    <string name="reload_provider">Muat Ulang Penyedia</string>
</resources>